--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "chromedriver": "^103.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "geckodriver": "^4.2.1",
     "puppeteer": "^14.2.1",
-    "selenium-webdriver": "^4.2.0"
+    "selenium-webdriver": "^4.12.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
